# tscaptum

./: LICENSE  README.md  classification_tasks.py  examples_tscaptum.ipynb  main.py  pyproject.toml  regression_task.py  test.ipynb  test_TSCaptum.ipynb  utils.py
TSCaptum/: ts_captum_method.py
src/TsCaptum/: _TsCaptum_loader.py  _forwarder.py
src/TsCaptum/data/: milk_lactose_p75_train_X_2d.npy  milk_lactose_p75_train_targets.xlsx
src/tsCaptum/: _forwarder.py  _ridge_classifier.py  _utils.py  explainers.py  visualization.py
src/tsCaptum/data/: milk_lactose_p75_test_X_2d.npy  milk_lactose_p75_test_targets.xlsx
tsCaptum/: _forward.py  _forward_classification.py  _forward_regression.py  _forwarder.py  _tsCaptum_loader.py  _utils.py  explainers.py  ts_captum_method.py
tsCaptum/data/: CMJ_univariate.npy
